fixed dark mode bug

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -21,6 +21,7 @@ ul li {
 
 span {
   display: inline-block;
+  color: #333;
 }
 
 .Parent-wrapper {
